[package]
name = "single"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.32", features = ["full"] }
serde={ version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions="1.0.0"
actix-http = "3.4.0"

[profile.release]
# uncomment strip and opt-level to reduce the size of the file
# strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.
